css/index.css
/* FONTS */
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css?family=Handlee&display=swap');

/* Blue: #007BFF */

/* =============================================================================================== */
/* Hero Section
/* =============================================================================================== */

#hero img {
    width: 100vw;
    height: auto;
}

/* =============================================================================================== */
/* Schedule Section
/* =============================================================================================== */

#schedule table {
    margin: 2em 0 0 0;
    width: 90vw;
    border-collapse: collapse;
    border: 2px solid #00000025;
    border-style: solid;
    background-color: #ffffff;
    font-size: 1.2rem;
}

#schedule .table-wrapper {
    display: flex;
    justify-content: space-around;
}

#schedule table tr {
    text-align: center;
}

#schedule table tr:hover, #table-ext:hover {
    background-color: rgb(252, 252, 252);
}

#schedule td {
    border: none;
    height: 50px;
    vertical-align: middle;
    font-family: "Poppins";
    font-weight: 10;
}

#schedule th {
    background-color: #007BFF !important;
    color: #ffffff;
    font-family: "Permanent Marker";
    font-weight: 200;
    font-size: 1.5rem;
    font-weight: 5000;
    border: none;
    height: 50px;
    vertical-align: middle;
}

#schedule .place {
    color: #007BFF;
    text-decoration: underline;
    font-weight: 600;
    cursor: pointer;
}

#schedule .tbd-place {
    color: #0f0f0f;
    text-decoration: none;
    font-weight: 600;
}

#schedule #table-ext {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 2em;
    border: 2px solid #00000025;
    border-style: solid;
    border-top: none;
    height: 50px;
    margin: 0 0 5em 0;
}

#schedule .change-margin-bottom {
    margin-bottom: 0.5em !important;
}

#schedule #table-ext a {
    font-size: 1.5rem;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #007BFF;
    text-decoration: underline;
    font-weight: 300;
    cursor: pointer;
}

#schedule #no-events {
    font-size: 2rem;
    font-family: "Permanent Marker";
    text-transform: lowercase;
    margin-bottom: 8px;
}

/* Responsive Media Queries */
@media only screen and (max-width: 600px) {
    table td  {
        font-size: 1rem;
    }

    table th {
        font-size: 1.4rem;
    }
}

@media only screen and (max-width: 525px) {
    table td  {
        font-size: 0.9rem;
    }

    table th {
        font-size: 1.2rem;
    }
} 

@media only screen and (max-width: 400px) {
    table td  {
        font-size: 0.8rem;
    }

    table th {
        font-size: 1rem;
    }
}

/* =============================================================================================== */
/* Info Section
/* =============================================================================================== */

.split-half {
    display: flex; 
    justify-content: space-evenly;
    align-items: center;
    width: 100vw;
}

.split-half img {
    max-width: 45%;
}

.split-half div {
    max-width: 50%;
    text-align: center;
}

.split-half div h1 {
    font-family: "Permanent Marker", "Poppins", Arial, Helvetica, sans-serif;
    font-weight: 900;
    font-size: 2.3rem;
    margin: 0 0 0.4em 0;
}

.split-half div p {
    font-family: "Poppins", Arial, Helvetica, sans-serif;
    font-size: 1.25rem;
}

.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.divider {
    margin: 5em 0;
    width: 85vw;
    height: 4px;
    border-radius: 5px;
    background-color: #007BFF40;
}

